[package]
name = "skyhawk-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rdkafka = "0.38.0"
tokio = {version = "1.49.0", features = ["full"]}
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenv = "0.15.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "json", "postgres", "macros", "time", "migrate"]}
time = { version = "0.3.44", features = ["macros"] }
dashmap = "6.1.0"
crossbeam-skiplist = "0.1"
uuid = { version = "1.19.0", features = ["v4"] }
futures = "0.3.31"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
